Sort accordion children by order property
Updated the `TnTAccordion` component to render child components in a specified order using a new `Order` parameter in the `TnTAccordionChild` class. Added `builder.SetKey(this);` to improve rendering performance and instance tracking.

--- a/TnTComponents/Accordion/TnTAccordion.razor
+++ b/TnTComponents/Accordion/TnTAccordion.razor
@@ -11,8 +11,7 @@
                    autofocus="@AutoFocus"
                    @ref="Element">
         <DeferRendering>
-            @foreach (var child in _children)
-            {
+            @foreach (var child in _children.OrderBy(c => c.Order)) {
                 @child.RenderChild()
             }
         </DeferRendering>
