--- a/TnTComponents/Virtualization/TnTVirtualize.razor
+++ b/TnTComponents/Virtualization/TnTVirtualize.razor
@@ -3,44 +3,32 @@
 @typeparam TItem
 @inherits TnTPageScriptComponent<TnTVirtualize<TItem>>
 
-
-
-@if (_items.Any())
-{
-    @foreach (var item in _items)
-    {
-        if (ItemTemplate is not null)
-        {
+@if (_items.Any()) {
+    @foreach (var item in _items) {
+        if (ItemTemplate is not null) {
             @ItemTemplate(item)
         }
-        else
-        {
+        else {
             <div>
                 @item
             </div>
         }
     }
 }
-else if(!_loading)
-{
-    if(EmptyTemplate is not null)
-    {
+else if (!_loading) {
+    if (EmptyTemplate is not null) {
         @EmptyTemplate
     }
-    else
-    {
+    else {
         <text>No items to show</text>
     }
 }
 
-@if (_loading)
-{
-    if (LoadingTemplate is not null)
-    {
+@if (_loading) {
+    if (LoadingTemplate is not null) {
         @LoadingTemplate
     }
-    else
-    {
+    else {
         <TnTProgressIndicator Appearance="ProgressAppearance.Linear" />
     }
 }
