Enhance TnTTab components with new features and cleanup
Updated TnTTabChild to implement IDisposable for resource management, adding new parameters for configurability such as Disabled, ElementName, OnTintColor, and EnableRipple. Restructured the Icon property with improved documentation.

Enhanced TnTTabView with new parameters including ActiveIndicatorColor, HeaderBackgroundColor, and HeaderTextColor for better customization. Added methods to manage child tabs and made minor rendering adjustments. Updated associated JavaScript for tab child management.

--- a/TnTComponents/TabView/TnTTabView.razor
+++ b/TnTComponents/TabView/TnTTabView.razor
@@ -6,8 +6,7 @@
 <tnt-tab-view @attributes=AdditionalAttributes class="@ElementClass" style="@ElementStyle" @ref="Element" data-permanent>
     <CascadingValue Value="this" IsFixed="true">
         <DeferRendering>
-            <div 
-                class="@(CssClassBuilder.Create().AddClass("tnt-tab-view-header").AddFilled().AddForegroundColor(HeaderTextColor).AddBackgroundColor(HeaderBackgroundColor).Build())">
+            <div class="@(CssClassBuilder.Create().AddClass("tnt-tab-view-header").AddFilled().AddForegroundColor(HeaderTextColor).AddBackgroundColor(HeaderBackgroundColor).Build())">
                 <span class="tnt-tab-view-header-buttons">
 
                     @foreach (var pair in _tabChildren.Select((child, index) => new { child, index })) {
