Enhance documentation and refactor event management classes
- Added XML documentation comments to improve code readability.
- Refactored `TnTDropEventArgs` for clarity on drop event data.
- Introduced methods in `DisabledDateOnly` and `DisabledDateRange` for checking disabled dates and time slots.
- Updated `ScheduleViewBase` with new methods for date and event management.
- Modified `TnTDisabledDateTime` to include static methods for creating disabled date instances.
- Enhanced `TnTEvent` and `TnTScheduler` with comprehensive XML comments.
- Updated `TnTWeekView` with new methods and properties for event management.
- Improved code readability and maintainability by refactoring methods and removing redundancy.

--- a/TnTComponents/Scheduler/TnTScheduler.razor
+++ b/TnTComponents/Scheduler/TnTScheduler.razor
@@ -5,8 +5,7 @@
 @inherits TnTComponentBase
 
 <div @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle" id="@ElementId" title="@ElementTitle" lang="@ElementLang" @ref="Element">
-    @if (!HideDateControls)
-    {
+    @if (!HideDateControls) {
         <div class="date-controls">
             <TnTImageButton Icon="@(new MaterialIcon{ Icon = MaterialIcon.ChevronLeft })" OnClickCallback="PreviousPage" TextColor="@TextColor" class="prev-button" />
             <TnTButton Appearance="ButtonAppearance.Text" OnClickCallback="GoToToday" class="today-button" TextColor="@TextColor" Elevation="0">
