Refactor TnTLazyLoad for improved loading logic
Updated conditional rendering in TnTLazyLoad.razor to enhance readability with braces. Introduced ChildContent and LoadingContent properties in TnTLazyLoad.razor.cs, along with XML documentation comments. Added BeginLoad method to manage loading state. Minor adjustments in TnTLazyLoad.razor.js for loading functionality.

--- a/TnTComponents/LazyLoader/TnTLazyLoad.razor
+++ b/TnTComponents/LazyLoader/TnTLazyLoad.razor
@@ -2,15 +2,13 @@
 @namespace TnTComponents
 @inherits TnTPageScriptComponent<TnTLazyLoad>
 
-@if (!_beginLoad)
-{
+@if (!_beginLoad) {
     <div @ref="Element">
         @LoadingContent
     </div>
 }
 
-@if (_beginLoad)
-{
+@if (_beginLoad) {
     @ChildContent
 }
 @PageScript
