--- a/TnTComponents/Grid/TnTDataGrid.razor
+++ b/TnTComponents/Grid/TnTDataGrid.razor
@@ -12,8 +12,7 @@
     @{
         StartCollectingColumns();
     }
-    @if (!_manualGrid)
-    {
+    @if (!_manualGrid) {
         @ChildContent
     }
     <DeferRendering>
@@ -32,8 +31,7 @@
 
             <thead>
                 <tr class="tnt-components tnt-data-grid-header" aria-rowindex="1">
-                    @foreach (var col in _columns)
-                    {
+                    @foreach (var col in _columns) {
                         var CellId = TnTComponentIdentifier.NewId();
                         col.ShowSortIcon = _sortByColumn == col;
                         <TnTDataGridHeaderCell class="@($"{col.ElementClass}{(col.Sortable && _interactive ? " tnt-col-sortable" : null)}")"
@@ -48,21 +46,17 @@
                 </tr>
             </thead>
             <tbody>
-                @if (Virtualize)
-                {
+                @if (Virtualize) {
                     <TnTVirtualize @ref="_virtualizeComponent"
                                    TItem="(int RowIndex, TGridItem Data)"
                                    ItemsProvider="@ProvideVirtualizedItemsAsync">
                         <LoadingTemplate>
-                            @if (LoadingContent is null)
-                            {
-                                @for (var i = 0; i < _numberOfRowsToLoad; ++i)
-                                {
+                            @if (LoadingContent is null) {
+                                @for (var i = 0; i < _numberOfRowsToLoad; ++i) {
                                     string? _rowsDataSize = $"height: {ItemSize}px";
 
                                     <TnTDataGridRow aria-rowindex="@(i + 1)" style="@_rowsDataSize" TGridItem="TGridItem">
-                                        @for (var colIndex = 0; colIndex < _columns.Count; colIndex++)
-                                        {
+                                        @for (var colIndex = 0; colIndex < _columns.Count; colIndex++) {
                                             var col = _columns[colIndex];
 
                                             <TnTDataGridCell class="grid-cell-placeholder" @key="@col" GridColumn=@(colIndex+1) TGridItem="TGridItem">
@@ -72,8 +66,7 @@
                                     </TnTDataGridRow>
                                 }
                             }
-                            else
-                            {
+                            else {
                                 <TnTDataGridRow TGridItem="TGridItem" Class="loading-content-row">
                                     <TnTDataGridCell Class="loading-content-cell">
                                         @LoadingContent
@@ -83,8 +76,7 @@
                         </LoadingTemplate>
 
                         <ItemTemplate>
-                            @if (context.Data != null)
-                            {
+                            @if (context.Data != null) {
                                 var rowClass = RowClass?.Invoke(context.Data) ?? null;
                                 var rowStyle = CssStyleBuilder.Create().AddStyle(RowStyle?.Invoke(context.Data) ?? null, null).AddStyle("height", $"{ItemSize}px").Build();
 
@@ -96,8 +88,7 @@
                                                 TGridItem="TGridItem"
                                                 OnClick="@OnRowClicked">
 
-                                    @for (var colIndex = 0; colIndex < _columns.Count; colIndex++)
-                                    {
+                                    @for (var colIndex = 0; colIndex < _columns.Count; colIndex++) {
                                         var col = _columns[colIndex];
                                         <TnTDataGridCell @key="@col" class="@col.ElementClass" style="@col.ElementStyle" TGridItem="TGridItem" Item="@context.Data">
                                             @((RenderFragment)(b => col.CellContent(b, context.Data)))
@@ -113,16 +104,14 @@
 
                     </TnTVirtualize>
                 }
-                else if(_ariaBodyRowCount <= 0) {
+                else if (_ariaBodyRowCount <= 0) {
                     @_renderLoadingContent
                 }
-                else
-                {
+                else {
                     @_renderNonVirtualizedRows
                 }
 
-                @if (_manualGrid)
-                {
+                @if (_manualGrid) {
                     @ChildContent
                 }
             </tbody>
@@ -132,26 +121,21 @@
 </CascadingValue>
 
 @code {
-    private void RenderNonVirtualizedRows(RenderTreeBuilder __builder)
-    {
+    private void RenderNonVirtualizedRows(RenderTreeBuilder __builder) {
         var initialRowIndex = 1; // aria-rowindex is 1-based, plus 1 if there is a header
         var rowIndex = initialRowIndex;
-        if (_currentNonVirtualizedViewItems.Any())
-        {
+        if (_currentNonVirtualizedViewItems.Any()) {
             Loading = false;
-            foreach (var item in _currentNonVirtualizedViewItems)
-            {
+            foreach (var item in _currentNonVirtualizedViewItems) {
                 RenderRow(__builder, rowIndex++, item);
             }
         }
-        else
-        {
+        else {
             RenderEmptyContent(__builder);
         }
     }
 
-    private void RenderRow(RenderTreeBuilder __builder, int rowIndex, TGridItem item)
-    {
+    private void RenderRow(RenderTreeBuilder __builder, int rowIndex, TGridItem item) {
         var rowClass = RowClass?.Invoke(item) ?? null;
         var rowStyle = RowStyle?.Invoke(item) ?? null;
         Loading = false;
@@ -159,8 +143,7 @@
                         aria-rowindex="@rowIndex"
                         class="@rowClass"
                         style="@CssStyleBuilder.Create().AddStyle(rowStyle, null).AddStyle("height", $"{ItemSize}px").Build()" OnClick="@OnRowClicked" TGridItem="TGridItem" Item="@item">
-            @for (var colIndex = 0; colIndex < _columns.Count; colIndex++)
-            {
+            @for (var colIndex = 0; colIndex < _columns.Count; colIndex++) {
                 var col = _columns[colIndex];
 
                 <TnTDataGridCell @key="@col" class="@col.ElementClass" style="@col.ElementStyle" TGridItem="TGridItem" Item="@item">
@@ -170,13 +153,11 @@
         </TnTDataGridRow>
     }
 
-    private void RenderPlaceholderRow(RenderTreeBuilder __builder, PlaceholderContext placeholderContext)
-    {
+    private void RenderPlaceholderRow(RenderTreeBuilder __builder, PlaceholderContext placeholderContext) {
         string? _rowsDataSize = $"height: {ItemSize}px";
 
         <TnTDataGridRow aria-rowindex="@(placeholderContext.Index + 1)" style="@_rowsDataSize" TGridItem="TGridItem">
-            @for (var colIndex = 0; colIndex < _columns.Count; colIndex++)
-            {
+            @for (var colIndex = 0; colIndex < _columns.Count; colIndex++) {
                 var col = _columns[colIndex];
 
                 <TnTDataGridCell class="grid-cell-placeholder" @key="@col" GridColumn=@(colIndex+1) TGridItem="TGridItem">
@@ -186,20 +167,16 @@
         </TnTDataGridRow>
     }
 
-    private void RenderEmptyContent(RenderTreeBuilder __builder)
-    {
-        @if (_manualGrid)
-        {
+    private void RenderEmptyContent(RenderTreeBuilder __builder) {
+        @if (_manualGrid) {
             return;
         }
         <tr class="empty-content-row">
             <td class="empty-content-cell" colspan="@_columns.Count">
-                @if (EmptyContent is null)
-                {
+                @if (EmptyContent is null) {
                     @("No data to show!")
                 }
-                else
-                {
+                else {
                     @EmptyContent
                 }
             </td>
@@ -207,17 +184,13 @@
 
     }
 
-    private void RenderLoadingContent(RenderTreeBuilder __builder)
-    {
-        @if (LoadingContent is null)
-        {
-            @for (var i = 0; i < _numberOfRowsToLoad; ++i)
-            {
+    private void RenderLoadingContent(RenderTreeBuilder __builder) {
+        @if (LoadingContent is null) {
+            @for (var i = 0; i < _numberOfRowsToLoad; ++i) {
                 RenderPlaceholderRow(__builder, new PlaceholderContext(i, ItemSize));
             }
         }
-        else
-        {
+        else {
             <TnTDataGridRow TGridItem="TGridItem" Class="loading-content-row">
                 <TnTDataGridCell Class="loading-content-cell">
                     @LoadingContent
