Add badge support to buttons and introduce TnTBadge component
Updated `ButtonsComponent.razor` and `ImageButtons.razor` to include new buttons with badges. Introduced `TnTBadge.razor` and its logic in `TnTBadge.razor.cs` for customizable badge components. Modified `TnTButton` and `TnTImageButton` classes to support badges. Added styles in `_badge.scss` and updated `_buttons.scss` for proper badge positioning. Adjusted ripple effects in `_ripple.scss` and ensured proper imports in `style.scss`. Cleaned up project file by removing `compilerconfig.json` references and improved ripple handling in `TnTComponents.lib.module.js`.

--- a/LiveTest/LiveTest.Client/Components/ButtonsComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/ButtonsComponent.razor
@@ -133,6 +133,20 @@
         <TnTButton OnClickCallback="@OnClick" BorderRadius="@(new TnTComponents.Core.TnTBorderRadius() {StartStart = 5, StartEnd = 2, EndEnd = 9, EndStart=3})">
             Obscure Radius
         </TnTButton>
+
+        <TnTButton OnClickCallback="@OnClick">
+            With Badge
+            <TnTComponents.TnTBadge>
+                5
+            </TnTComponents.TnTBadge>
+        </TnTButton>
+        
+        <TnTButton OnClickCallback="@OnClick">
+            With Long Badge
+            <TnTComponents.TnTBadge>
+                This is a really long badge
+            </TnTComponents.TnTBadge>
+        </TnTButton>
     </TnTColumn>
 </TnTRow>
 
