--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -22,6 +22,7 @@
 @import 'TnTComponents/_chips.scss';
 @import 'TnTComponents/_typeahead.scss';
 @import 'TnTComponents/_scheduler.scss';
+@import 'TnTComponents/_badge.scss';
 
 .tnt-components {
     font-family: 'Roboto', sans-serif;
