--- a/TnTComponents/Styles/TnTComponents/_ripple.scss
+++ b/TnTComponents/Styles/TnTComponents/_ripple.scss
@@ -1,10 +1,5 @@
-﻿.tnt-ripple {
-    overflow: hidden;
-    position: relative;
-}
-
-.tnt-rippling {
-    animation: ripple 500ms ease-out;
+﻿.tnt-rippling {
+    animation: ripple 900ms ease-out;
     display: block;
     position: absolute;
     border-radius: 50%;
@@ -21,4 +16,16 @@
         transform: scale(0.5);
         opacity: .6;
     }
+}
+
+tnt-ripple-effect {
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: none;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border-radius: inherit;
 }
