Add badge support to TnTFabButton and TnTImageButton
Introduce new badge functionality in `TnTFabButton` and `TnTImageButton` components, enabling customizable badges. Update `TnTBadge` with a static method for easier badge creation. Adjust SCSS styles for improved badge appearance and positioning, ensuring proper integration with buttons.

--- a/LiveTest/LiveTest.Client/Components/FabButtonsComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/FabButtonsComponent.razor
@@ -18,6 +18,20 @@
     <TnTProgressIndicator Appearance="ProgressAppearance.Ring" />
     Progress Ring
 </TnTFabButton>
+
+
+<TnTFabButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Filled">
+    Badge
+    <TnTBadge>
+        5
+</TnTBadge>
+</TnTFabButton>
+<TnTFabButton OnClickCallback="@OnClick" Appearance="ButtonAppearance.Filled">
+    Badge
+    <TnTBadge>
+        This is along badge that should be ellipses
+</TnTBadge>
+</TnTFabButton>
 @*
 *@
 @code {
