--- a/TnTComponents/Styles/TnTComponents/_badge.scss
+++ b/TnTComponents/Styles/TnTComponents/_badge.scss
@@ -1,9 +1,20 @@
 .tnt-badge {
     pointer-events: none;
     padding: 4px;
-    min-width: 16px;
-    min-height: 16px;
-    box-sizing:border-box;
-    padding:0 4px;
+    min-width: 24px;
+    height: 24px;
+    box-sizing: border-box;
+    padding: 0 4px;
+    position: absolute;
+    top: -2px;
+    left: calc(100% - 12px);
+    max-width: 128px;
+    text-overflow: ellipsis;
+    overflow: clip;
+    white-space: nowrap;
     @extend .tnt-label-medium;
+
+    .tnt-badge-content {
+        vertical-align: sub;
+    }
 }
