Enhance tab view and ripple effect timing
Added rendering of tab labels in TnTTabView.razor and included a TnTRippleEffect component for improved interaction feedback. Adjusted ripple effect removal timing in TnTComponents.lib.module.js from 1000ms to 500ms for quicker visual response.

--- a/TnTComponents/Styles/TnTComponents/_ripple.scss
+++ b/TnTComponents/Styles/TnTComponents/_ripple.scss
@@ -1,5 +1,5 @@
 ﻿.tnt-rippling {
-    animation: ripple 900ms ease-out;
+    animation: ripple 500ms ease-out forwards;
     display: block;
     position: absolute;
     border-radius: 50%;
