Enhance tab button with label rendering
Added rendering of `@child.Label` in the button element
of `TnTTabView.razor` to improve user interface clarity
and usability.

--- a/TnTComponents/TabView/TnTTabView.razor
+++ b/TnTComponents/TabView/TnTTabView.razor
@@ -20,6 +20,8 @@
                                 @child.Icon?.Render()
                             }
                             @child.Label
+
+                            <TnTRippleEffect />
                         </button>
                     }
                 </span>
