Enhance ripple effect functionality in components
Updated `EnableRipple` property in `TnTAccordionChild` and `TnTNavLink` to be read-write with a default value of `true`. Added conditional rendering for `TnTRippleEffect` in `TnTAccordionChild`, `TnTNavLink`, and `TnTSideNavLink`. Removed unnecessary console log statements from `TnTComponents.lib.module.js`. Updated SCSS styles to ensure proper positioning of ripple effects.

--- a/TnTComponents/Styles/TnTComponents/_layout.scss
+++ b/TnTComponents/Styles/TnTComponents/_layout.scss
@@ -79,6 +79,10 @@
                     background-color: var(--active-bg-color);
                 }
             }
+
+            &:has(> tnt-ripple-effect) {
+                position: relative;
+            }
         }
     }
 
