--- a/TnTComponents/Styles/TnTComponents/_anchor.scss
+++ b/TnTComponents/Styles/TnTComponents/_anchor.scss
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     overflow: hidden;
     display: inline-flex;
+    position:relative;
 
     &:not(.tnt-underlined) {
         text-decoration: none;
