--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -495,101 +495,103 @@
             }
         }
     }
+}
 
-    &:is(fieldset) {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        border-color: $tnt-color-outline;
-        border-width: 1px;
-        box-sizing: border-box;
-        padding: 8px;
-        @extend .tnt-label-large;
+fieldset.tnt-input.tnt-components {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    border-color: $tnt-color-outline;
+    border-width: 1px;
+    box-sizing: border-box;
+    padding: 8px;
+    @extend .tnt-label-large;
 
-        &.tnt-vertical {
-            flex-direction: column;
-            align-items: unset;
-            height: fit-content;
+    &.tnt-vertical {
+        flex-direction: column;
+        align-items: unset;
+        height: fit-content;
+    }
+
+    &[disabled] {
+        cursor: not-allowed;
+
+        input, .tnt-label, label {
+            pointer-events: none;
         }
-
-        &.tnt-disabled {
-            input, .tnt-label, label {
-                pointer-events: none;
-            }
-        }
+    }
 
 
-        &.tnt-filled {
-            border-top: none;
-            border-left: none;
-            border-right: none;
-
-            legend {
-                transform: translateY(12px) translateX(24px);
-            }
-        }
+    &.tnt-filled {
+        border-top: none;
+        border-left: none;
+        border-right: none;
 
         legend {
-            color: inherit;
+            transform: translateY(12px) translateX(24px);
         }
+    }
 
-        label {
-            display: inline-flex;
-            flex-direction: row;
-            padding: 8px;
-            border-radius: 16px;
-            align-items: center;
-        }
+    legend {
+        color: inherit;
+    }
 
-        .tnt-label {
-            position: relative;
-            transform: none;
-            color: inherit;
-        }
+    label {
+        display: inline-flex;
+        flex-direction: row;
+        padding: 8px;
+        border-radius: 16px;
+        align-items: center;
+    }
 
-        input {
-            width: revert;
-        }
+    .tnt-label {
+        position: relative;
+        transform: none;
+        color: inherit;
+    }
 
-        .tnt-radio-button {
-            width: 20px;
-            height: 20px;
+    input {
+        width: revert;
+    }
+
+    .tnt-radio-button {
+        width: 20px;
+        height: 20px;
+        box-sizing: border-box;
+        border-radius: 50%;
+        border: 2px solid $tnt-color-outline;
+        position: relative;
+        transition: border-color linear 100ms;
+
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            border-radius: inherit;
             box-sizing: border-box;
-            border-radius: 50%;
-            border: 2px solid $tnt-color-outline;
-            position: relative;
-            transition: border-color linear 100ms;
-
-            &:before {
-                content: '';
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                top: 0;
-                left: 0;
-                border-radius: inherit;
-                box-sizing: border-box;
-                transition: transform ease-in-out 100ms;
-                transform: scale(0);
-                transform-origin: 50% 50%;
-            }
+            transition: transform ease-in-out 100ms;
+            transform: scale(0);
+            transform-origin: 50% 50%;
         }
+    }
 
 
-        @each $colorClass in $color-classes {
-            &.tnt-tint-color-#{$colorClass} {
-                label {
-                    &:has(input:checked) {
-                        color: var(--tnt-color-#{$colorClass});
+    @each $colorClass in $color-classes {
+        &.tnt-tint-color-#{$colorClass} {
+            label {
+                &:has(input:checked) {
+                    color: var(--tnt-color-#{$colorClass});
 
-                        .tnt-radio-button {
-                            border-color: var(--tnt-color-#{$colorClass});
+                    .tnt-radio-button {
+                        border-color: var(--tnt-color-#{$colorClass});
 
-                            &:before {
-                                background-color: var(--tnt-color-#{$colorClass});
-                                transform: scale(0.7);
-                            }
+                        &:before {
+                            background-color: var(--tnt-color-#{$colorClass});
+                            transform: scale(0.7);
                         }
                     }
                 }
@@ -597,6 +599,7 @@
         }
     }
 }
+
 
 .tnt-components.tnt-input-file input::file-selector-button {
     @extend .tnt-label-large;
