Enhance disabled state styles and WebKit progress bars
Updated foreground color styles in `_colors.scss` to include
`.tnt-disabled` for better visual feedback on disabled components.
Added background color for `::-webkit-progress-bar` in
`_progress.scss` to improve appearance in WebKit browsers.
Removed an extra closing brace for formatting consistency.

--- a/TnTComponents/Styles/TnTComponents/_progress.scss
+++ b/TnTComponents/Styles/TnTComponents/_progress.scss
@@ -12,6 +12,10 @@
             background: var(--progress-color);
         }
 
+        &::-webkit-progress-bar {
+            background-color: $tnt-color-surface-container-highest;
+        }
+
         &::-webkit-progress-value {
             background: var(--progress-color);
         }
