--- a/TnTComponents/Styles/TnTComponents/_colors.scss
+++ b/TnTComponents/Styles/TnTComponents/_colors.scss
@@ -96,7 +96,7 @@ $color-classes-no-transparent: black, white, primary, surface-tint, on-primary, 
     .tnt-fg-color-#{$colorClass} {
         color: var(--tnt-color-#{$colorClass});
 
-        &:has(> progress.tnt-components) {
+        &.tnt-disabled:has(> progress.tnt-components) {
             color: color-mix(in srgb, var(--tnt-color-#{$colorClass}) 40%, transparent);
 
             & > progress.tnt-components {
