Add interactive count increment feature to Accordion
Implemented an interactive button in `Accordion.razor` that increments a count when clicked. Added an `OnClickCallback` to `Button 3` to log the increment action and display messages for each count value. Initialized the `_count` variable to 0 in the `@code` section.

--- a/LiveTest/LiveTest.Client/Pages/Accordion.razor
+++ b/LiveTest/LiveTest.Client/Pages/Accordion.razor
@@ -1,6 +1,6 @@
 ﻿@page "/accordion"
 @using TnTComponents
-
+@rendermode InteractiveAuto
 
 <TnTAccordion>
     <TnTAccordionChild Label="Title 1" OpenByDefault="true">
@@ -10,9 +10,16 @@
         <TnTButton ElementTitle="Button 2">
             Button 2
         </TnTButton>
-        <TnTButton ElementTitle="Button 3">
+        <TnTButton ElementTitle="Button 3" OnClickCallback="@(() => {
+    Console.WriteLine("Incrementing Count");
+_count++;})">
             Button 3
         </TnTButton>
+        @for(var i = 0; i < _count; ++i){
+            <div>
+                I am count @(i + 1)
+            </div>
+        }
     </TnTAccordionChild>
     <TnTAccordionChild Label="Title 2" OpenByDefault="true">
         <TnTProgressIndicator Appearance="ProgressAppearance.Ring"></TnTProgressIndicator>
@@ -63,5 +70,5 @@
 </TnTAccordion>
 
 @code {
-
+    private int _count = 0;
 }
