--- a/TnTComponents/Accordion/TnTAccordion.razor
+++ b/TnTComponents/Accordion/TnTAccordion.razor
@@ -11,7 +11,7 @@
                    autofocus="@AutoFocus"
                    @ref="Element">
         <DeferRendering>
-            @foreach (var child in _children.OrderBy(c => c.Order)) {
+            @foreach (var (_, child) in _children.OrderBy(kv => kv.Value.Order)) {
                 @child.RenderChild()
             }
         </DeferRendering>
