--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -23,6 +23,7 @@
 @import 'TnTComponents/_typeahead.scss';
 @import 'TnTComponents/_scheduler.scss';
 @import 'TnTComponents/_badge.scss';
+@import 'TnTComponents/_wizard.scss';
 
 .tnt-components {
     font-family: 'Roboto', sans-serif;
