Refactor button positioning in _dialog.scss
- Removed `float: right;` from `button.tnt-components`.
- Added `position: absolute;`, `right: 0;`, and `top: -32px;` for improved layout control.

--- a/TnTComponents/Styles/TnTComponents/_dialog.scss
+++ b/TnTComponents/Styles/TnTComponents/_dialog.scss
@@ -25,7 +25,8 @@
         }
 
         button.tnt-components {
-            float: right;
+            position: absolute;
+            right: 0;
             top: -32px;
             background-color: transparent;
             color: inherit;
